# STRAP-LLM

./: .gitignore  LICENSE  README.md
.github/workflows/: python-publish.yml
benchmarks/: README.md
llm-instrumentation/: .gitignore  INSTALLATION.md  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
llm-instrumentation/.github/workflows/: performance.yml  tests.yml
llm-instrumentation/benchmarks/: baseline_dump.py  compression_analysis.py  memory_profiling.py  optimized_streaming.py
llm-instrumentation/docs/: API.md  ARCHITECTURE.md  BLOCK_IO_TRACEPOINTS.md  GETTING_STARTED.md  PERFORMANCE.md  STREAM_FORMAT.md  llm_prof.md
llm-instrumentation/examples/: basic_usage.py  complete_reasoning_demo.ipynb
llm-instrumentation/scripts/: analyze_tracepoints.py  generate_reports.sh  profile_basic_usage.sh  run_benchmarks.sh  setup_environment.sh  system_metrics.jsonl  system_metrics.py  tracepoints.py
llm-instrumentation/src/llm_instrumentation/: __init__.py
llm-instrumentation/src/llm_instrumentation/analysis/: __init__.py  visualization.py
llm-instrumentation/src/llm_instrumentation/cli/: __init__.py  llm_prof.py
llm-instrumentation/src/llm_instrumentation/core/: __init__.py  auto_detect.py  checkpoint.py  compression.py  config.py  framework.py  hooks.py  profiling.py  streaming.py
llm-instrumentation/src/llm_instrumentation/ebpf/: __init__.py  bpf_loader.py  exceptions.py
llm-instrumentation/src/llm_instrumentation/ebpf/aggregator/: __init__.py  interval.py
llm-instrumentation/src/llm_instrumentation/ebpf/collectors/: __init__.py  base.py  disk_io.py  mem.py  net.py  sched.py  sync_wait.py  syscalls_io.py
llm-instrumentation/src/llm_instrumentation/ebpf/correlation/: __init__.py  context.py
llm-instrumentation/src/llm_instrumentation/memory/: cuda_manager.py  ring_buffer.py
llm-instrumentation/tests/: test_token_tracking.py
llm-instrumentation/tests/unit/: test_hooks.py  test_packet_analysis.py  test_profiling.py  test_ring_buffer.py  test_streaming.py
