[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_instrumentation"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A high-performance instrumentation framework for large language model interpretability."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-username/llm-instrumentation"
"Bug Tracker" = "https://github.com/your-username/llm-instrumentation/issues"
